<resources>
    <string name="app_name">Thirsty Goat</string>
    <string name="welcome_message">Welcome To Your App</string>
    <string name="login_again">Log In Again</string>

    <!--<string name="auth0_client_id">M5xQRh1qxNyvAEvGtKkPPjvsTppsePhm</string>-->
    <!--<string name="auth0_domain">myoberon.auth0.com</string>-->

    <string name="auth0_client_id">f7D5NWyUEsGDPl9SNAq4RnuHOO2sUQCY</string>
    <string name="auth0_domain">gabrielnan.auth0.com</string>

    <string name="login_title">Welcome to Thirsty Goat</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_water_report">Water Report</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!--Enums-->
    <string name="water_type_bottled">Bottled</string>
    <string name="water_type_well">Well</string>
    <string name="water_type_stream">Stream</string>
    <string name="water_type_lake">Lake</string>
    <string name="water_type_spring">Spring</string>
    <string name="water_type_other">Other</string>

    <string name="source_condition_waste">Waste</string>
    <string name="source_condition_treatable_clear">Treatable Clear</string>
    <string name="source_condition_treatable_muddy">Treatable Muddy</string>
    <string name="source_condition_potable">Potable</string>

    <string name="purity_condition_safe">Safe</string>
    <string name="purity_condition_treatable">Treatable</string>
    <string name="purity_condition_unsafe">Unsafe</string>

    <string name="account_type_basic_user">Basic User</string>
    <string name="account_type_manager">Manager</string>
    <string name="account_type_worker">Worker</string>
    <string name="account_type_admin">Administrator</string>



    <!--Web stuff-->
    <string name="base_url_source_reports">https://thirstygoat.myoberon.com/api/source_reports</string>
    <string name="base_url_purity_reports">https://thirstygoat.myoberon.com/api/purity_reports</string>

    <!--Others-->
    <string name="condition_colon">Condition: </string>
    <string name="virus_ppm">Virus PPM</string>
    <string name="contaminant_ppm">Contaminant PPM</string>

    <string name="water_condition">Water Condition</string>
    <string name="water_type">Water Type</string>

    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="account_type">Account Type</string>
    <string name="map">Map</string>
    <string name="save">Save</string>
    <string name="add_report">Add Report</string>
    <string name="view_reports">View Reports</string>
    <string name="history_graph">History Graph</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="virus">Virus</string>
    <string name="contaminant">Contaminant</string>
    <string name="year">Year</string>
    <string name="graph">Graph!</string>

    <string name="date_colon">Date: </string>
    <string name="report_num_colon">       Report #: </string>
    <string name="latitude_colon">Latitude: </string>
    <string name="longitude_colon">Longitude: </string>
    <string name="source_type_colon">Source Type: </string>
    <string name="source_condition_colon">Source Condition: </string>
    <string name="reporter_colon">Reporter: </string>


</resources>
